--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>Tic-Tac-Toe Ultimate</h1>
+            <h1>Tic-Tac-Toe Game</h1>
             <p>Play against a friend or challenge the AI!</p>
         </header>
         
